chore: initial push to new remote

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
 		// Que directorios y archivos no queremos compilar
 		"node_modules",
 		"dist",
-		"**/__test__/*"
+		"src**/**/*.test.ts"
 	]
 }
