--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon src/index.ts --watch src --ext ts --exec tsx --ignore node_modules",
+		"build":"tsc",
 		"kill": "kill-port 3000",
 		"test": "jest  --detectOpenHandles",
 		"test:coverage": "npm run pretest && jest -detectOpenHandles --coverage",
@@ -17,6 +18,7 @@
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/jest": "^30.0.0",
+		"@types/morgan": "^1.9.10",
 		"@types/node": "^24.3.0",
 		"@types/supertest": "^6.0.3",
 		"@types/swagger-ui-express": "^4.1.8",
@@ -38,6 +40,7 @@
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"express-validator": "^7.2.1",
+		"morgan": "^1.10.1",
 		"pg": "^8.16.3",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.7",
