--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"dev": "nodemon src/index.ts --watch src --ext ts --exec tsx --ignore node_modules",
 		"build":"tsc",
+		"start": "node dist/index.js",
 		"kill": "kill-port 3000",
 		"test": "jest  --detectOpenHandles",
 		"test:coverage": "npm run pretest && jest -detectOpenHandles --coverage",
